# sumo_docker_pipeline

./: .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  config.yml  docker-compose.yml  example_script.py  pyproject.toml
.circleci/: config.yml
examples/: .gitignore  example_script.py  handling-outputs.ipynb  run_multiple_job.ipynb  run_single_job.ipynb
sumo_docker_pipeline/: __init__.py  config_generation_module.py  docker_operation_module.py  pipeline.py  result_module.py  static.py
sumo_docker_pipeline/commons/: __init__.py  result_module.py  sumo_config_obj.py
sumo_docker_pipeline/file_handler/: base.py  gcs_filehandler.py  local_filehandler.py
sumo_docker_pipeline/operation_module/: __init__.py  base_operation.py  docker_operation_module.py  local_operation_module.py
sumo_docker_pipeline/pipeline/: __init__.py  pipeline.py
sumo_tasks_pipeline/: __init__.py  config_generation_module.py
sumo_tasks_pipeline/commons/: result_module.py
sumo_tasks_pipeline/file_handler/: __init__.py  gcs_filehandler.py
sumo_tasks_pipeline/operation_module/: docker_operation_module.py  local_operation_module.py
sumo_tasks_pipeline/pipeline/: pipeline.py
tests/: test_config_generation_module.py  test_docker_operation_module.py  test_pipeline.py  test_result_module.py
tests/file_handler/: test_gcs_filehandler.py  test_local_filehandler.py
tests/operation_module/: test_docker_operation_module.py  test_local_operation_module.py
tests/resources/: error-out.xml
tests/resources/config_complete/: .gitignore  grid.flows.xml  grid.net.xml  grid.sumo.cfg  grid_detectors.det.xml  outputgrid_loop.out.xml
tests/resources/config_template/: grid.flows.xml  grid.net.xml  grid.sumo.cfg  grid_detectors.det.xml
(+1 files in other folders)
