[tool.poetry]
name = "sumo_docker_pipeline"
version = "2.0"
description = "A pipeline to call a traffic simulator: SUMO"
authors = ["Kensuke Mitsuzawa <kensuke.mit@gmail.com>"]
maintainers = ["Kensuke Mitsuzawa <kensuke.mit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
docker = "*"
pandas = "*"
bs4 = "*"
lxml = "*"
joblib = "*"
sumo-output-parsers = "^0.5"

Shapely = { version = "^1.7.0", optional = true }
pyproj = { version = "^3.0.0", optional = true }
SumoNetVis = { version = "^1.6.0", optional = true }
geopandas = { version = "^0.10.0", optional = true }
geoviews = { version = "^1.9.1", optional = true }
Cartopy = { version = "^0.18.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-resource-path = "^1.3.0"
nbmake = "^0.5"
pytest-parallel = "^0.1.0"

[build-system]
requires = ["setuptools", "poetry", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
full = ["Shapely", "pyproj", "SumoNetVis", "geopandas", "geoviews"]
